fix some alignment things of button

--- a/src/App.css
+++ b/src/App.css
@@ -68,7 +68,7 @@ button {
   background-color: #0f0f0f;
   border: none;
   color: white;
-  padding: 10px 20px;
+  padding: 8px 16px;
   text-align: center;
   text-decoration: none;
   display: inline-block;
